# listen-moe-cli

./: Cargo.toml  appveyor.yml  rust-toolchain
.circleci/: config.yml
.github/workflows/: release.yml  rust.yml
src/: args.rs  main.rs  shared.rs  websocket.rs
